--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <ul>
             <li>Need to obtain in future</li>
         </ul>
-        <a href="./about.html">About</a>
+        <a target="_blank" href="./about.html">About</a>
         <br>
-        <a href="./contact.html">contact</a>
+        <a target="_blank" href="./contact.html">contact</a>
         
     </body>
 </html>
