--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     </head>
     <body>
-        <img src="./images/aja.jpg" alt="Applicant Image" />
+        <!-- <img src="./images/aja.jpg" alt="Applicant Image" /> -->
         <h3>Summary</h3>
         <p></p>
         <h3>Education</h3>
